--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -317,10 +317,13 @@ h2 {
   font-size: 1.5rem;
   line-height: 1.4;
   letter-spacing: 0.1rem;
+  background-color: #aa3939;
+  text-align: center;
 }
 
 h3 {
   font-size: 1rem;
+  background-color: #000000;
 }
 
 h4 {
@@ -1488,7 +1491,7 @@ body.is-preload #bg:before {
 
 #header nav ul li a {
   display: block;
-  min-width: 7.5rem;
+  min-width: 15rem;
   height: 2.75rem;
   line-height: 2.75rem;
   padding: 0 1.25rem 0 1.45rem;
@@ -1496,11 +1499,13 @@ body.is-preload #bg:before {
   letter-spacing: 0.1rem;
   font-size: 0.8rem;
   border-bottom: 0;
-  text-align: left;
+  text-align: center;
+  transition: all 1s;
 }
 
 #header nav ul li a:hover {
   background-color: rgba(255, 255, 255, 0.075);
+  transform: scale(1.1);
 }
 
 #header nav ul li a:active {
@@ -1795,6 +1800,16 @@ body.is-preload #footer {
   transition: all 1s;
 }
 
+img {
+  transition: all 5s;
+}
+
 img:hover {
   transform: scale(1.1);
+  cursor: pointer;
 }
+
+.major {
+  background-color: transparent;
+}
+
